--- a/package.json
+++ b/package.json
@@ -25,11 +25,11 @@
     "pg": "^8.11.3",
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.32.1",
-    "nodemailer": "^6.9.4",
     "crypto": "^1.0.1",
     "uuid": "^9.0.0",
     "rate-limiter-flexible": "^2.4.2",
-    "express-validator": "^7.0.1"
+    "express-validator": "^7.0.1",
+    "googleapis": "^118.0.0"
   },
   "devDependencies": {
     "nodemon": "^3.0.1",
