--- a/client/package.json
+++ b/client/package.json
@@ -14,7 +14,8 @@
     "react-hook-form": "^7.45.4",
     "date-fns": "^2.30.0",
     "lodash": "^4.17.21",
-    "uuid": "^9.0.0"
+    "uuid": "^9.0.0",
+    "@supabase/supabase-js": "^2.39.8"
   },
   "scripts": {
     "start": "react-scripts start",
