--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "build": "cd client && npm run build",
     "start": "node server/index.js",
     "install-client": "cd client && npm install",
-    "heroku-postbuild": "npm run install-client && npm run build"
+    "heroku-postbuild": "npm run install-client && npm run build",
+    "test": "jest"
   },
   "keywords": ["ab-testing", "analytics", "conversion-optimization"],
   "author": "daar-om.nl",
@@ -29,11 +30,14 @@
     "uuid": "^9.0.0",
     "rate-limiter-flexible": "^2.4.2",
     "express-validator": "^7.0.1",
-    "googleapis": "^118.0.0"
+    "googleapis": "^118.0.0",
+    "date-fns": "^2.30.0"
   },
   "devDependencies": {
     "nodemon": "^3.0.1",
-    "concurrently": "^8.2.0"
+    "concurrently": "^8.2.0",
+    "jest": "^29.7.0",
+    "supertest": "^6.3.3"
   },
   "engines": {
     "node": ">=16.0.0"
